# xcmp_prototype_playground

./: Cargo.toml  README.md  build.sh  output.txt
.github/workflows/: release.yml
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
pallets/xcmp_message_stuffer/: Cargo.toml
pallets/xcmp_message_stuffer/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
xcmp_relayer/: Cargo.toml
xcmp_relayer/src/: main.rs
zombienet/: config.toml
