[package]
name = "parachain-template-runtime"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Runtime, ready for hacking together a parachain."
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/coax1d/polkadot-sdk"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/coax1d/polkadot-sdk", optional = true, branch = "andrews_branch" }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.4.1", optional = true }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
smallvec = "1.11.0"

# Local
pallet-xcmp-message-stuffer = { path = "../pallets/xcmp_message_stuffer", default-features = false }

# Substrate
frame-benchmarking = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, optional = true, branch = "andrews_branch" }
frame-executive = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
frame-support = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
frame-system = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
frame-system-benchmarking = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, optional = true, branch = "andrews_branch" }
frame-system-rpc-runtime-api = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
frame-try-runtime = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, optional = true, branch = "andrews_branch" }
pallet-aura = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
pallet-authorship = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
pallet-balances = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
pallet-mmr = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
pallet-session = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
pallet-sudo = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
pallet-timestamp = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
pallet-transaction-payment = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
sp-api = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
sp-block-builder = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
sp-consensus-aura = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
sp-consensus-beefy = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
beefy-primitives = { package = "sp-consensus-beefy", git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
sp-core = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
sp-inherents = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
sp-offchain = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
sp-runtime = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
sp-session = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
sp-std = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
sp-transaction-pool = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
sp-version = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
sp-mmr-primitives = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }

# Polkadot
pallet-xcm = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
polkadot-parachain-primitives = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
polkadot-runtime-common = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
xcm = { package = "staging-xcm", git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch" }
xcm-executor = { package = "staging-xcm", git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch" }
xcm-builder = { package = "staging-xcm-executor", git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch" }

# Cumulus
cumulus-pallet-aura-ext = { git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch", default-features = false }
cumulus-pallet-session-benchmarking = {git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch", default-features = false, version = "3.0.0"}
cumulus-pallet-xcm = { git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch", default-features = false }
cumulus-primitives-core = { git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch", default-features = false }
pallet-collator-selection = { git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch", default-features = false }
parachain-info = { git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch", default-features = false }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"beefy-primitives/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-mmr/std",
	"pallet-collator-selection/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-xcmp-message-stuffer/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-beefy/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-mmr-primitives/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"hex-literal",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-dmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
]
