[package]
name = "xcmp_relayer"
version = "0.1.0"
repository = 'https://github.com/w3f/xcmp_prototype_playground'
edition = "2021"
license = "Apache-2.0"
description = "A simple example / template wallet built for the tuxedo template runtime"

[dependencies]
runtime = { path = "../runtime", package = "parachain-template-runtime"}

serde_json = "1.0"
parity-scale-codec = { version = '3.6.6', default-features = false }
jsonrpsee = { version = "0.16.2", features = ["http-client"] }
tokio = { version = "1.25.0", features = ["full"] }
anyhow = "1.0.69"
hex = "0.4.3"
hex-literal = "0.4.1"
# clap = { version = "4.1.8", features = [ "derive"] }
directories = "5.0.0"
sled = "0.34.7"
futures = "0.3"
env_logger = "0.10.0"
log = "0.4.17"

sp-runtime = { git = 'https://github.com/paritytech/polkadot-sdk', branch = "master" }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "master" }
