[package]
name = "xcmp_relayer"
version = "0.1.0"
repository = 'https://github.com/w3f/xcmp_prototype_playground'
edition = "2021"
license = "Apache-2.0"
description = "Relayer for XCMP"

[dependencies]
runtime = { path = "../runtime", package = "parachain-template-runtime"}

serde_json = { workspace = true }
parity-scale-codec = { workspace = true }
jsonrpsee = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-mmr-primitives = { workspace = true }

subxt = { workspace = true }
subxt-signer = { workspace = true }
mmr-rpc = { workspace = true }
