[package]
name = "pallet-xcmp-message-stuffer"
authors = ["Web3 Foundation"]
description = "FRAME pallet stuffing xcm messages into an xcmp message which then gets stuff in a MMR then into a Trie"
version = "0.1.0"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/coax1d/polkadot-sdk"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, optional = true, branch = "andrews_branch" }
frame-support = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
frame-system = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
pallet-mmr = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
sp-consensus-beefy = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
sp-core = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch", default-features = false }

[dev-dependencies]
serde = { version = "1.0.188" }

# Substrate
sp-io = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
sp-runtime = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }
pallet-balances = { git = "https://github.com/coax1d/polkadot-sdk", default-features = false, branch = "andrews_branch" }

# Polkadot
polkadot-runtime-common = { git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch" }
xcm = { package = "staging-xcm", git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch" }
xcm-executor = { package = "staging-xcm", git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch" }
xcm-builder = { package = "staging-xcm-executor", git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch" }

# Cumulus
cumulus-pallet-xcmp-queue = { git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch" }
cumulus-pallet-parachain-system = { git = "https://github.com/coax1d/polkadot-sdk", branch = "andrews_branch" }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"codec/std",
	"cumulus-primitives-core/std",
	"scale-info/std",
	"pallet-mmr/std",
	"sp-consensus-beefy/std",
	"sp-core/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]
try-runtime = [ "frame-support/try-runtime" ]
